# costcalc2

./: .gitignore  README.md  pyproject.toml  setup.py
conda/: meta.yaml
costcalc/: __init__.py  core.py  costcalc.py  frontends.py  helper.py
docs/: conf.py  general_structure.rst  index.rst  interpret_results.rst  tables_basics.rst
docs/_downloads/: blank_v2.xlsx  blank_v3.xlsx  blank_v4.xlsx  working_v3.xlsx  working_v4.xlsx  working_v5.xlsx
src/costcalc/: __init__.py  constants.py  core.py  exceptions.py  frontends.py  helper.py
tests/: data_build.py  test_core.py
tests/data/: br_clean_fd.pickle  cl_clean_fd.pickle  clean_con_excel.csv  clean_con_res_com.csv  clean_con_res_ful.csv  clean_conv_fd.csv  clean_conv_route.csv  clean_lin_excel.csv  clean_lin_fd.csv  clean_lin_res_com.csv  clean_lin_res_ful.csv  clean_lin_route.csv  clean_mat.csv  clean_mat.xlsx  clean_rxn.xlsx  mass_lin_fd.csv  mass_lin_res_ful.csv  mass_lin_route.csv  opex_lin_excel.csv  opex_lin_fd.csv  opex_lin_res_ful.csv  opex_lin_route.csv  split_solv_lin_excel.csv  split_solv_lin_fd.csv  split_solv_lin_res_ful.csv  split_solv_lin_route.csv
