[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "costcalc2"
version = "0.10.1"

description = "Calculate raw material costs for chemical synthetic route"
keywords = [ "Chemical", "Synthesis", "Route", "Cost", "Pricing" ]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

authors = [
  { name="Ryan Nelson", email="rnelsonchem@gmail.com" },
]

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Programming Language :: Python :: 3',
]

requires-python = ">=3"
dependencies = [
        'numpy>=1.0',
        'pandas>=1.0',
        'matplotlib>=3.0',
        'openpyxl>=3.0',
        ]
        
[project.urls]
"Homepage" = "https://github.com/rnelsonchem/costcalc2"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [ 
    "pytest", 
]

dev = [
    "pytest", 
    "build", 
    "ipython",
    "twine",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=prepend",
]

filterwarnings = [
    "error",
    "ignore::pandas.errors.PerformanceWarning",
]
